Stability updates